tests/machine/x/go/dataset_where_filter.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/dataset_where_filter.go:10:15: undefined: PeopleItem
../../../tests/machine/x/go/dataset_where_filter.go:11:3: undefined: PeopleItem
../../../tests/machine/x/go/dataset_where_filter.go:15:3: undefined: PeopleItem
../../../tests/machine/x/go/dataset_where_filter.go:19:3: undefined: PeopleItem
../../../tests/machine/x/go/dataset_where_filter.go:23:3: undefined: PeopleItem
../../../tests/machine/x/go/dataset_where_filter.go:28:15: undefined: Adults
../../../tests/machine/x/go/dataset_where_filter.go:29:16: undefined: Adults
../../../tests/machine/x/go/dataset_where_filter.go:33:32: undefined: Adults

1: //go:build ignore
